--- a/CV.html
+++ b/CV.html
@@ -1,125 +1,146 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>CV</title>
+	<title>CV | Violetta Kochmareva</title>
 	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300i,400,600" rel="stylesheet">
 </head>
 <body>
-	<div class="vcard">
-		<img class="photo" src="Kochmareva.jpg" alt="Kochmareva-photo" width="200px" height="250px">
-		<h1 class="fn">Виолетта Кочмарева</h1>
-		<time class="bday">Дата рождения: 29.10.1996</time>
-		<a class="email" href="vil.mikki@gmail.com">vil.mikki@gmail.com</a>
-		<a href="https://github.com/Vil-mikki" class="url">Github: github.com/Vil-mikki</a>
-		<a href="https://codepen.io/vil-mikki/" class="url">Codepen: codepen.io/vil-mikki/</a>
-		<div class="tel">+7 (985) 3607791</div>
-		<div class="adr">
-			<span class="locality">Санкт-Петербург</span>
-			<div class="country-name">Россия</div>
-		</div>
-	</div>
-	<section class="education">
-		<div class="header">
-			<h2>Образование</h2>
-		</div>
-		<div class="content">
-			<div class="vcard">
-				<h3 class="org">Российская Академия народного хозяйства и государственной службы при Президенте Российской Федерации</h3>
-				<span class="details">Институт менеджмента и маркетинга, кафедра "Международное сотрудничество", направление "Международные отношения", бакалавр</span>
-				<div class="time">
-					<span class="dtstart" title="2014-09-01">Сентябрь 2014</span>
-						- 
-					<span class="dtend" title="2018-07-01">Июль 2018</span>
-					</div>
-				<span class="location">Москва, Россия</span>
-				<div class="summary">
-					<ul>
-						<li>Диплом с отличием</li>
-						<li>Тема выпускной квалификационной работы: "Проблемы обеспечения безопасности региона Центральной Азии и интересы России"</li>
-						<li>Стажировка в Государственной Думе Федерального Собрания Российской Федерации при депутате Л.Н. Тутовой, весна 2017</li>
-						<li>Практика в Государственной Думе Федерального Собрания Российской Федерации в комитете по делам СНГ, евразийской интеграции и связям с соотечественниками, май 2018</li>
-						<li>Активное участие в научно-практической деятельности</li>
-					</ul>
+	<div class="wrapper">
+		<header class="contacts vcard">
+			<img class="contacts__photo" src="Kochmareva.jpg" alt="Kochmareva-photo" width="195px" height="250px">
+			<div class="contacts__body">
+				<h1 class="contacts__name fn">Виолетта Кочмарева</h1>
+				<ul class="contacts__links">
+					<li><a class="email" href="mailto: vil.mikki@gmail.com">vil.mikki@gmail.com</a></li>
+					<li><a href="https://github.com/Vil-mikki" class="url">github.com/Vil-mikki</a></li>
+					<li><a href="https://codepen.io/vil-mikki/" class="url">codepen.io/vil-mikki</a></li>
+				</ul>
+				<div class="contacts__tel tel">+7 (985) 3607791</div>
+				<div class="contacts__adr adr">
+					<span class="locality">Санкт-Петербург, </span>
+					<span class="country-name">Россия</span>
 				</div>
+				<div class="note">Трудолюбивый, отзывчивый и стремящийся к самосовершенствованию человек, отличающийся упорством в достижении целей, дисциплинированностью, ответственностью и способностью работать в команде.</div>
 			</div>
-		</div>
-		<div class="header">
-			<h2>Дополнительное образование</h2>
-		</div>
-		<div class="content">
-			<ul>
-				<li class="vcard">
-					<h3 class="org">Дипломатическая Академия МИД России</h3>
-					<span class="details">Два семестра курсов испанского языка</span>
+		</header>
+		<main>
+			<section class="education">
+				<header class="header">
+					<h2>Образование</h2>
 					<div class="time">
 						<span class="dtstart" title="2014-09-01">Сентябрь 2014</span>
-						 - 
-						<span class="dtend" title="2015-05-30">Май 2015</span>
+								&ndash; 
+						<span class="dtend" title="2018-07-01">Июль 2018</span>
+						<p class="location">Москва, Россия</p>
 					</div>
-					<span class="location">Москва, Россия</span>
-				</li>
-				<li class="vcard">
-					<h3 class="org">Riga Technical University</h3>
-					<span class="details">Программа международного обмена студентов, языковая практика</span>
-					<div class="time">
-						<span class="dtstart" title="2015-06-01">Июнь 2015</span>
-						 - 
-						<span class="dtend" title="2015-06-01">Июль 2015</span>
+				</header>
+				<div class="content">
+					<div class="vcard">
+						<h3 class="org">Российская Академия народного хозяйства и государственной службы при Президенте Российской Федерации</h3>
+						<p class="details">Институт менеджмента и маркетинга, кафедра "Международное сотрудничество", направление "Международные отношения", бакалавр</p>
+						<div class="summary">
+							<ul>
+								<li>Диплом с отличием</li>
+								<li>Тема выпускной квалификационной работы: "Проблемы обеспечения безопасности региона Центральной Азии и интересы России"</li>
+								<li>Стажировка в Государственной Думе Федерального Собрания Российской Федерации при депутате Л.Н. Тутовой, весна 2017</li>
+								<li>Практика в Государственной Думе Федерального Собрания Российской Федерации в комитете по делам СНГ, евразийской интеграции и связям с соотечественниками, май 2018</li>
+								<li>Активное участие в научно-практической деятельности</li>
+							</ul>
+						</div>
 					</div>
-					<span class="location">Рига, Латвия</span>
-				</li>
-				<li class="vcard">
-					<h3 class="org">AIP Spanish Language School</h3>
-					<span class="details">Программа международного обмена студентов, языковая практика</span>
-					<div class="time">
-						<span class="dtstart" title="2016-05-01">Май 2016</span>
-						 - 
-						<span class="dtend" title="2016-06-01">Июнь 2016</span>
-					</div>
-					<span class="location">Валенсия, Испания</span>
-				</li>
-				<li class="vcard">
-					<h3 class="org">HTML Academy</h3>
-					<span class="details">Интерактивные онлайн курсы HTML, CSS, JS</span>
-					<div class="time">
-						<span class="dtstart" title="2018-07-01">Июль 2018</span>
-						 - 
-						<span class="dtend" title="2018-11-01">Ноябрь 2018</span>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</section>
-	<section class="skills">
-		<div class="header">
-			<h2>Навыки</h2>
-		</div>
-		<div class="content">
-			<p>HTML5, CSS3, препроцессоры Less, SCSS, JavaScript(основы), Photoshop, BEM, git, адаптивная вёрстка.</p>
-			<p><strong>Языки: </strong>Английский &mdash; upper-intermediate, испанский — intermediate.</p>
-		</div>
-	</section>
-	<section class="interests">
-		<div class="header">
-			<h2>Интересы</h2>
-		</div>
-		<div class="content">
-			<p><strong>Профессиональные: </strong>front-end development, user experience design and usability.</p>
-			<p><strong>Остальные: </strong>история искусств, кинематограф, фотография, международные отношения, политика, урбанистика, дайвинг, электронная музыка, путешествия.</p>
-		</div>
-	</section>
-	<section class="social-work">
-		<div class="header">
-			<h2>Общественная деятельность</h2>
-		</div>
-		<div class="content">
-			<ul>
-				<li>Участие в качестве волонтёра и team-leader'а в организации всеросийского форума для студентов и выпускников технических специальностей «Breakpoint IV», «Breakpoint V», «Breakpoint VI» при международной ассоциации студентов AIESEC.</li>
-				<li>Участие в организации мероприятий Фонда Русской Экономики — "Хакатон идей", лидерская программа ФРЭ.</li>
-				<li>Участник федерального образовательного проекта "Школа парламентаризма" и федерального проекта "Молодежная команда страны".</li>
-			</ul>
-		</div>
-	</section>
+				</div>
+			</section>
+			<section class="additional__education">
+				<header class="header">
+					<h2>Дополнительное образование</h2>
+					<ul class="additional__education--time">
+						<li>
+							<div class="time">
+								<span class="dtstart" title="2014-09-01">Сентябрь 2014</span>
+								 &ndash; 
+								<span class="dtend" title="2015-05-30">Май 2015</span>
+								<span class="location">Москва, Россия</span>
+							</div>
+						</li>
+						<li>
+							<div class="time">
+								<span class="dtstart" title="2015-06-01">Июнь 2015</span>
+								 &ndash; 
+								<span class="dtend" title="2015-06-01">Июль 2015</span>
+								<span class="location">Рига, Латвия</span>
+							</div>
+						</li>
+						<li>
+							<div class="time">
+								<span class="dtstart" title="2016-05-01">Май 2016</span>
+								 &ndash; 
+								<span class="dtend" title="2016-06-01">Июнь 2016</span>
+								<span class="location">Валенсия, Испания</span>
+							</div>
+						</li>
+						<li>
+							<div class="time">
+								<span class="dtstart" title="2018-07-01">Июль 2018</span>
+								 &ndash; 
+								<span class="dtend" title="2018-11-01">Ноябрь 2018</span>
+							</div>
+						</li>
+					</ul>
+				</header>
+				<div class="content">
+					<ul>
+						<li class="vcard">
+							<h3 class="org">Дипломатическая Академия МИД России</h3>
+							<span class="details">Два семестра курсов испанского языка</span>
+						</li>
+						<li class="vcard">
+							<h3 class="org">Riga Technical University</h3>
+							<span class="details">Программа международного обмена студентов, языковая практика</span>
+						</li>
+						<li class="vcard">
+							<h3 class="org">AIP Spanish Language School</h3>
+							<span class="details">Программа международного обмена студентов, языковая практика</span>
+						</li>
+						<li class="vcard">
+							<h3 class="org">HTML Academy</h3>
+							<span class="details">Интерактивные онлайн курсы HTML, CSS, JS</span>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="skills">
+				<header class="header">
+					<h2>Навыки</h2>
+				</header>
+				<div class="content">
+					<p>HTML5, CSS3, Less, SCSS, JavaScript (основы), Photoshop, BEM, git, адаптивная вёрстка.</p>
+					<p><strong>Языки: </strong>Английский &mdash; upper-intermediate, испанский &mdash; intermediate.</p>
+				</div>
+			</section>
+			<section class="interests">
+				<header class="header">
+					<h2>Интересы</h2>
+				</header>
+				<div class="content">
+					<p><strong>Профессиональные: </strong> разработка фронтенда, дизайн UX, юзабилити.</p>
+					<p><strong>Остальные: </strong>история искусств, кинематограф, фотография, международные отношения, политика, урбанистика, дайвинг, электронная музыка, путешествия.</p>
+				</div>
+			</section>
+			<section class="social-work">
+				<header class="header">
+					<h2>Общественная деятельность</h2>
+				</header>
+				<div class="content">
+					<ul>
+						<li>Участие в качестве волонтёра и team-leader'а в организации всеросийского форума для студентов и выпускников технических специальностей «Breakpoint IV», «Breakpoint V», «Breakpoint VI» при международной ассоциации студентов AIESEC.</li>
+						<li>Участие в организации мероприятий Фонда Русской Экономики &mdash; «Хакатон идей», лидерская программа ФРЭ.</li>
+						<li>Участник федерального образовательного проекта «Школа парламентаризма» и федерального проекта «Молодежная команда страны».</li>
+					</ul>
+				</div>
+			</section>
+		</main>
+	</div>
 </body>
 </html>
