--- a/CV.html
+++ b/CV.html
@@ -17,7 +17,7 @@
 					<li><a href="https://github.com/Vil-mikki" class="url">github.com/Vil-mikki</a></li>
 					<li><a href="https://codepen.io/vil-mikki/" class="url">codepen.io/vil-mikki</a></li>
 				</ul>
-				<div class="contacts__tel tel">+7 (985) 3607791</div>
+				<div class="contacts__tel tel">+7 (985) 360-77-91</div>
 				<div class="contacts__adr adr">
 					<span class="locality">Санкт-Петербург, </span>
 					<span class="country-name">Россия</span>
