--- a/CV.html
+++ b/CV.html
@@ -11,7 +11,7 @@
 		<header class="contacts vcard">
 			<img class="contacts__photo" src="Kochmareva.jpg" alt="Kochmareva-photo" width="195px" height="250px">
 			<div class="contacts__body">
-				<h1 class="contacts__name fn">Виолетта Кочмарева</h1>
+				<h1 class="contacts__name fn">Виолетта Кочмарёва</h1>
 				<ul class="contacts__links">
 					<li><a class="email" href="mailto: vil.mikki@gmail.com">vil.mikki@gmail.com</a></li>
 					<li><a href="https://github.com/Vil-mikki" class="url">github.com/Vil-mikki</a></li>
@@ -39,14 +39,14 @@
 				<div class="content">
 					<div class="vcard">
 						<h3 class="org">Российская Академия народного хозяйства и государственной службы при Президенте Российской Федерации</h3>
-						<p class="details">Институт менеджмента и маркетинга, кафедра "Международное сотрудничество", направление "Международные отношения", бакалавр</p>
+						<p class="details">Институт менеджмента и маркетинга, кафедра «Международное сотрудничество», направление «Международные отношения», бакалавр</p>
 						<div class="summary">
 							<ul>
-								<li>Диплом с отличием</li>
-								<li>Тема выпускной квалификационной работы: "Проблемы обеспечения безопасности региона Центральной Азии и интересы России"</li>
-								<li>Стажировка в Государственной Думе Федерального Собрания Российской Федерации при депутате Л.Н. Тутовой, весна 2017</li>
-								<li>Практика в Государственной Думе Федерального Собрания Российской Федерации в комитете по делам СНГ, евразийской интеграции и связям с соотечественниками, май 2018</li>
-								<li>Активное участие в научно-практической деятельности</li>
+								<li>Диплом с отличием.</li>
+								<li>Тема выпускной квалификационной работы: «Проблемы обеспечения безопасности региона Центральной Азии и интересы России».</li>
+								<li>Стажировка в Государственной Думе Федерального Собрания Российской Федерации при депутате Л.Н. Тутовой, весна 2017.</li>
+								<li>Практика в Государственной Думе Федерального Собрания Российской Федерации в комитете по делам СНГ, евразийской интеграции и связям с соотечественниками, май 2018.</li>
+								<li>Активное участие в научно-практической деятельности.</li>
 							</ul>
 						</div>
 					</div>
@@ -69,6 +69,7 @@
 								<span class="dtstart" title="2015-06-01">Июнь 2015</span>
 								 &ndash; 
 								<span class="dtend" title="2015-06-01">Июль 2015</span>
+								<br>
 								<span class="location">Рига, Латвия</span>
 							</div>
 						</li>
@@ -134,7 +135,7 @@
 				</header>
 				<div class="content">
 					<ul>
-						<li>Участие в качестве волонтёра и team-leader'а в организации всеросийского форума для студентов и выпускников технических специальностей «Breakpoint IV», «Breakpoint V», «Breakpoint VI» при международной ассоциации студентов AIESEC.</li>
+						<li>Участие в качестве волонтёра и team-leader'а в организации всеросcийского форума для студентов и выпускников технических специальностей «Breakpoint IV», «Breakpoint V», «Breakpoint VI» при международной ассоциации студентов AIESEC.</li>
 						<li>Участие в организации мероприятий Фонда Русской Экономики &mdash; «Хакатон идей», лидерская программа ФРЭ.</li>
 						<li>Участник федерального образовательного проекта «Школа парламентаризма» и федерального проекта «Молодежная команда страны».</li>
 					</ul>
