Add new CV version and fix urls

--- a/CV.html
+++ b/CV.html
@@ -14,8 +14,8 @@
 				<h1 class="contacts__name fn">Виолетта Кочмарёва</h1>
 				<ul class="contacts__links">
 					<li><a class="email" href="mailto: vil.mikki@gmail.com">vil.mikki@gmail.com</a></li>
-					<li><a href="https://github.com/Vil-mikki" class="url">github.com/Vil-mikki</a></li>
-					<li><a href="https://codepen.io/vil-mikki/" class="url">codepen.io/vil-mikki</a></li>
+					<li><a href="https://github.com/Vil-mikki" class="url" target="_blank">github.com/Vil-mikki</a></li>
+					<li><a href="https://codepen.io/vil-mikki/" class="url" target="_blank">codepen.io/vil-mikki</a></li>
 				</ul>
 				<div class="contacts__tel tel">+7 (985) 360-77-91</div>
 				<div class="contacts__adr adr">
@@ -118,7 +118,7 @@
 						<li class="vcard">
 							<h3 class="org">Московский физико-технический институт & Yandex via Coursera</h3>
 							<span class="details">Специализация «Разработка интерфейсов: вёрстка и JavaScript»</span>
-							<a href="https://www.coursera.org/account/accomplishments/specialization/TGDJLBBLXDJP" class="url">Сертификаты о прохождении</a>
+							<a href="https://www.coursera.org/account/accomplishments/specialization/TGDJLBBLXDJP" class="url" target="_blank">Сертификаты о прохождении</a>
 						</li>
 					</ul>
 				</div>
